--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
-    "@react-three/drei": "^9.111.3",
-    "@react-three/fiber": "^8.17.5",
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.5.0",
     "axios": "^1.7.5",
@@ -21,8 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
-    "react-sahil": "file:",
-    "three": "^0.167.1"
+    "react-sahil": "file:"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
