--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "npm run build && npm run preview"
+    "start": "npm install --omit=dev && npm run build  && npm run preview"
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
