--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
-    "react-sahil": "file:"
+    "react-sahil": "file:",
+    "react-toastify": "^10.0.5",
+    "sweetalert2": "^11.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
