--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stripe/stripe-js": "^4.5.0",
     "axios": "^1.7.5",
     "bootstrap-icons": "^1.11.3",
+    "framer-motion": "^11.11.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
